toggle switch and alignment issues corrected

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -7,3 +7,8 @@
       font-family:  Manrope,sans-serif;
     }
   }
+ 
+input:checked ~ .dot {
+  transform: translateX(100%);
+  background-color: #ffd601;
+}
